Updated engine and jmx for shutdown with ipv4 or ipv6; tested working in eclipse